--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -12,55 +12,32 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
     />
-    <style>
-      .timer {
-        display: flex;
-        gap: 10px;
-        margin-top: 20px;
-      }
-      .field {
-        text-align: center;
-      }
-      .value {
-        font-size: 2em;
-        display: block;
-      }
-      .label {
-        font-size: 1em;
-        color: #777;
-      }
-      button[data-start] {
-        margin-top: 10px;
-        padding: 10px 20px;
-        font-size: 1.2em;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start disabled>Start</button>
+    <div class="container">
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start disabled>Start</button>
 
-    <div class="timer">
-      <div class="field">
-        <span class="value" data-days>00</span>
-        <span class="label">Days</span>
-      </div>
-      <div class="field">
-        <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
-      </div>
-      <div class="field">
-        <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
-      </div>
-      <div class="field">
-        <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
+      <div class="timer">
+        <div class="field">
+          <span class="value" data-days>00</span>
+          <span class="label">Days</span>
+        </div>
+        <div class="field">
+          <span class="value" data-hours>00</span>
+          <span class="label">Hours</span>
+        </div>
+        <div class="field">
+          <span class="value" data-minutes>00</span>
+          <span class="label">Minutes</span>
+        </div>
+        <div class="field">
+          <span class="value" data-seconds>00</span>
+          <span class="label">Seconds</span>
+        </div>
       </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
     <script src="./js/1-timer.js"></script>
   </body>
 </html>
